plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.app'
version = '0.0.1-SNAPSHOT'

ext {
    mapstructVersion = '1.5.5.Final'
}

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'javax.servlet:jstl:1.2'
    implementation 'com.google.guava:guava:33.1.0-jre'
    implementation 'org.modelmapper:modelmapper:3.2.0'
    implementation 'com.google.code.gson:gson'
    implementation 'org.apache.velocity:velocity-engine-core:2.3'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.aspectj:aspectjweaver'
    implementation 'io.github.classgraph:classgraph:4.8.173'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	
	compileOnly 'org.projectlombok:lombok'
	
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	//testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'

}

tasks.withType(JavaCompile) {
    options.compilerArgs = [
        '-Amapstruct.defaultComponentModel=spring'
    ]
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
    archiveFileName='restApi.jar'
}